<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity11">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#0FFFFF"
        android:backgroundTint="#8822C7D6"
        tools:context=".MainActivity7"
        tools:layout_editor_absoluteX="-12dp"
        tools:layout_editor_absoluteY="155dp">

        <ImageView
            android:id="@+id/imageView16"
            android:layout_width="89dp"
            android:layout_height="78dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/img_2" />

        <ImageView
            android:id="@+id/imageView15"
            android:layout_width="67dp"
            android:layout_height="53dp"
            app:srcCompat="@drawable/na"
            tools:layout_editor_absoluteX="27dp"
            tools:layout_editor_absoluteY="16dp" />

        <TextView
            android:id="@+id/textView20"
            android:layout_width="216dp"
            android:layout_height="108dp"
            android:layout_marginTop="100dp"
            android:fontFamily="@font/aclonica"
            android:text="One person package"
            android:textAlignment="center"
            android:textSize="34sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="300dp"
            android:backgroundTint="#3F51B5"
            android:text="Back"
            android:textColor="#090909"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView20" />

        <ImageView
            android:id="@+id/imageView20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:rotationY="47"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView20"
            app:srcCompat="@drawable/s" />

        <Button
            android:id="@+id/button19"
            android:layout_width="317dp"
            android:layout_height="439dp"
            android:layout_marginTop="4dp"
            android:text="Button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView20" />

        <TextView
            android:id="@+id/textView28"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/packageDetails"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/button19"
            app:layout_constraintTop_toBottomOf="@+id/textView20" />

        <TextView
            android:id="@+id/textView25"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/packageDetails2"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/button19"
            app:layout_constraintTop_toBottomOf="@+id/textView28" />

        <TextView
            android:id="@+id/textView29"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/packageDetails3"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/button19"
            app:layout_constraintTop_toBottomOf="@+id/textView25" />

        <TextView
            android:id="@+id/textView30"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/packageDetails4"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/button19"
            app:layout_constraintTop_toBottomOf="@+id/textView29" />

        <TextView
            android:id="@+id/textView31"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/packageDetails5"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/button19"
            app:layout_constraintTop_toBottomOf="@+id/textView30" />

        <TextView
            android:id="@+id/textView32"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/packageDetails6"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/button19"
            app:layout_constraintTop_toBottomOf="@+id/textView31" />

        <TextView
            android:id="@+id/textView33"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/packageDetails7"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/button19"
            app:layout_constraintTop_toBottomOf="@+id/textView32" />

        <TextView
            android:id="@+id/textView34"
            android:layout_width="257dp"
            android:layout_height="50dp"
            android:text="@string/packageDetails8"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/button19"
            app:layout_constraintTop_toBottomOf="@+id/textView33" />

        <TextView
            android:id="@+id/textView35"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/packageDetails9"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/button19"
            app:layout_constraintTop_toBottomOf="@+id/textView34" />

        <TextView
            android:id="@+id/textView36"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/packageDetails10"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/textView34"
            app:layout_constraintTop_toBottomOf="@+id/textView35" />

        <TextView
            android:id="@+id/textView37"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/packageDetails11"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/button19"
            app:layout_constraintTop_toBottomOf="@+id/textView36" />

        <Button
            android:id="@+id/button20"
            android:layout_width="193dp"
            android:layout_height="65dp"
            android:layout_marginBottom="100dp"
            android:backgroundTint="#C308ED"
            android:text="Book"
            android:textColor="#0B0A0A"
            android:textColorLink="#EF0505"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/button14"
        android:layout_width="386dp"
        android:layout_height="45dp"
        android:scaleY="2"
        android:text="Button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView17"
        android:layout_width="51dp"
        android:layout_height="51dp"
        android:layout_marginStart="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/home" />

    <ImageView
        android:id="@+id/imageView18"
        android:layout_width="50dp"
        android:layout_height="52dp"
        android:layout_marginStart="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView19"
        app:srcCompat="@drawable/pro" />

    <ImageView
        android:id="@+id/imageView19"
        android:layout_width="51dp"
        android:layout_height="47dp"
        android:layout_marginStart="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView17"
        app:srcCompat="@drawable/sea" />

</androidx.constraintlayout.widget.ConstraintLayout>